--- a/pages/Dan003.html
+++ b/pages/Dan003.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="es">
+<cabeza>
+    <meta juego de personajes="UTF-8">
+    <meta nombre="„ver deport" contenido="ancho=dispositivo-ancho, escala inicial=1.0">
+    <guión src="https://code.jquery.com/jquery-3.6.0.min.js"></guión>
+    <guión src="../assets/js/loadnav.js"></guión>
+    <enlace rel="hoja de estilo" href="../assets/css/navstyle.css">
+    <título>Documento</título>
+</cabeza>
+<cuerpo>
+    <div identificación="contenedor-navbar"></div>
+    <div clase="contenido">
+        
+      <!-- Contenido de la página -->
+    <h1>Bienvenido Dan</h1>
 
+
+</cuerpo>
+</html>
