--- a/pages/requieres/nav_bar.html
+++ b/pages/requieres/nav_bar.html
@@ -1,1 +1,16 @@
-
+<nav class="navbar">
+    <div class="navbar-container">
+        <a href="#" class="brand">MiSitio</a>
+        <div class="menu-icon" id="menu-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <ul class="nav-menu" id="nav-menu">
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Servicios</a></li>
+            <li><a href="#">Nosotros</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+    </div>
+</nav>
