--- a/pages/Electro004.html
+++ b/pages/Electro004.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="../assets/js/loadnav.js"></script>
+    <link rel="stylesheet" href="../assets/css/navstyle.css">
+    <title>Document</title>
+</head>
+<body>
+    <div id="navbar-container"></div>
+    <div class="content">
+        
+      <!-- Contenido de la página -->
+    <h1>Bienvenido Electro</h1>
+
+
+</body>
+</html>
 
