--- a/pages/Lenny001.html
+++ b/pages/Lenny001.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="../assets/js/loadnav.js"></script>
+    <link rel="stylesheet" href="../assets/css/navstyle.css">
     <title>Document</title>
 </head>
 <body>
+    <div id="navbar-container"></div>
+    <div class="content">
+        
+      <!-- Contenido de la página -->
     <h1>Bienvenido Lenny</h1>
+
+
 </body>
 </html>
