--- a/pages/Electro004.html
+++ b/pages/Electro004.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="./assets/js/loadnav.js"></script>
-    <link rel="stylesheet" href="./assets/css/navstyle.css">
+    <script src="../assets/js/loadnav.js"></script>
+    <link rel="stylesheet" href="../assets/css/navstyle.css">
     <title>Document</title>
 </head>
 <body>
