--- a/pages/requieres/nav_bar.html
+++ b/pages/requieres/nav_bar.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
     <div class="navbar-container">
-        <a href="#" class="brand">MiSitio</a>
+        <a href="#" class="brand">AvantCode</a>
         <div class="menu-icon" id="menu-icon">
             <span></span>
             <span></span>
@@ -8,7 +8,7 @@
         </div>
         <ul class="nav-menu" id="nav-menu">
             <li><a href="#">Inicio</a></li>
-            <li><a href="#">Servicios</a></li>
+            <li><a href="#">Proyecto</a></li>
             <li><a href="#">Nosotros</a></li>
             <li><a href="#">Contacto</a></li>
         </ul>
